# sistemaEstoque

./: .env.example  .gitignore  DEPLOY-PAAS.md  Makefile  README.md  docker-compose.yml  handout.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  gunicorn_conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 04ae2bd5eab7_initial_schema.py  54ca32bcb947_financial_module_accounts_payable_.py  a1b2c3d4e5f6_password_reset_and_password_changed_at.py  b2c3d4e5f6a7_purchase_orders.py  c18b6969424f_avg_cost_login_lockout_token_revocation.py  f6c73f20f0c9_sale_price_order_extra_cost_and_item_.py  ff333c9fc5d9_crm_clientes_e_pedidos.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  database.py  email.py  exceptions.py  logging.py  money.py  net.py  observability.py  pagination.py  permissions.py  ratelimit.py  security.py  storage.py  validators.py
backend/app/db/: init_db.py  purge_tokens.py  sample_data.py
backend/app/models/: __init__.py  audit.py  catalog.py  customer.py  enums.py  finance.py  inventory.py  location.py  mixins.py  movement.py  order.py  product.py  purchase.py  security.py  supplier.py  types.py  user.py
backend/app/repositories/: __init__.py  audit.py  base.py  customer.py  finance.py  inventory.py  movement.py  order.py  product.py  purchase.py  supplier.py  user.py
backend/app/schemas/: alerts.py  audit.py  auth.py  catalog.py  common.py  (+11 more)
backend/tests/: conftest.py
(+122 files in other folders)
